--- a/day29/homework/style2.css
+++ b/day29/homework/style2.css
@@ -1,4 +1,4 @@
-.bgreen{background-color: green;
+.bgreen{background-color: #11ab7a;
 color: white;}
 
-.green{color: rgb(17, 171, 122);}
+.green{color: #11ab7a;}
