--- a/day30/classwork/style.css
+++ b/day30/classwork/style.css
@@ -1,5 +1,7 @@
-h1{text-transform: capitalize;
+h1{
+text-transform: capitalize;
 text-decoration: underline;
 font-family: monospace;
 font-weight: 900;
-font-style: italic;}
+font-style: italic;
+}
