--- a/day37/homework/style.css
+++ b/day37/homework/style.css
@@ -1,31 +1,50 @@
-.b2 {
-    border-radius: 50px;
-    float: right;
-    width: 100px;
-    height: 30px;
-    background-color: blue;
-    color:white;
-    border: 0cap;
+.i1 {
+    position: relative;
+    left: 650px;
+    top: 100px;
+    
 }
 
-.l1 {
-    float: right;
-    padding-right: 10px;
-    padding-top: 5px;
+.h1 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+    position: relative;
+    left: 620px;
+    top: 70px;
 }
 
-.r1 {
-    background-color: blue;
-    color: white;
-    border-radius: 50px;
-    border: 0cap;
-    width: 100px;
-    height: 30px;
+.lorem {
+    position: relative;
+    top: 30px;
+    left: 580px;
 }
 
-.t1{
-    float:right ;
-    width: 700px;
-    height: 600px;
+.i2 {
+    position: relative;
+    left: 400px;
 }
 
+.Gravida {
+    position: relative;
+    left: 600px;
+    bottom: 200px;
+    font-size: 40px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.quam {
+    position: relative;
+    left: 570px;
+    bottom: 200px;
+}
+
+.b1 {
+    position: relative;
+    left: 900px;
+    bottom: 280px;
+}
+
+.q11 {
+    position: relative;
+    left: 550px;
+}
