--- a/day41/classwork/style.css
+++ b/day41/classwork/style.css
@@ -1,113 +1,187 @@
-body {
-    background-image: url(https://images.pexels.com/photos/1179229/pexels-photo-1179229.jpeg?auto=compress&cs=tinysrgb&w=600);
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+div{
+    width: 500px;
+    height: 500px;
+    color: black;
+}
+.omlette {
+    width: 500px;
+    position: relative;
+    left: 500px;
+    top: 50px;
+    border-radius: 10px;
+    height: 250px;
 }
 
-
-
-
-.swim {
+.simple {
     position: relative;
-    left: 200px;
+    left: 500px;
+    top: 60px;
+    font-size: 40px;
+}
+
+.description {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position: relative;
+    left: 500px;
+    top: 70px;
+}
+
+.time {
+    position: relative;
+    left: 530px;
+    font-size: larger;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: purple;
+}
+
+.total {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.list{
+    position: relative;
+    left: 546px;
+}
+
+.ing {
+    font-size: 40px ;
+    color: brown;
+    position: relative;
+    left: 500px;
+    top: 30px;
+}
+
+.list2 {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    position: relative;
+    left: 520px;
+    top: 50px;
+}
+
+.ing2 {
+    font-size: 40px ;
+    color: brown;
+    position: relative;
+    left: 500px;
     top: 100px;
 }
 
-.insta {
+.list3 {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
     position: relative;
-    float: left;
-    top: 25px;
+    left: 500px;
+    top: 120px;
 }
 
-.web {
-    float: left;
-    font-size: 30px;
+.list4 {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    position: relative;
+    left: 500px;
+    top: 150px;
 }
 
-.signup {
-    font-size: 30px;
+.list5 {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    position: relative;
+    left: 500px;
+    top: 180px;
+}
+
+.list6 {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    position: relative;
+    left: 500px;
+    top: 210px;
+}
+
+.list7 {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    position: relative;
+    left: 500px;
+    top: 240px;
+}
+
+.list8 {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    position: relative;
+    left: 500px;
+    top: 270px;
+}
+
+.ing3 {
+    font-size: 40px ;
+    color: brown;
+    position: relative;
+    left: 500px;
+    top: 310px;
+}
+
+.this{
+    font-size: 15px ;
+    position: relative;
+    left: 500px;
+    top: 350px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    position: relative;
-    left: 900px;
-    top: -350px;
 }
 
-.input {
+.calories {
     position: relative;
-    left: 830px;
-    top: -350px;
-    font-size: 20px;
-    height: 40px;
+    left: 500px;
+    top: 360px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.input1 {
+.calories2 {
     position: relative;
-    left: 568px;
-    top: -300px;
-    font-size: 20px;
-    height: 40px;
+    left: 500px;
+    top: 380px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.home {
+.calories3 {
     position: relative;
-    left: 600px;
-    font-size: 20px;
-    top: -570px;
+    left: 500px;
+    top: 400px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.portfolio {
+.calories4 {
     position: relative;
-    left: 700px;
-    font-size: 20px;
-    top: -612px;
+    left: 500px;
+    top: 420px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.blog {
+.cal {
     position: relative;
-    left: 830px;
-    font-size: 20px;
-    top: -654px;
+    left:900px;
+    top: 275px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 
-.about {
+.cal2 {
     position: relative;
-    left: 910px;
-    font-size: 20px;
-    top: -696px;
+    left:900px;
+    top: 295px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 
-.contact {
+.cal3 {
     position: relative;
-    left: 1030px;
-    font-size: 20px;
-    top: -738px;
+    left:900px;
+    top: 315px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 
-.x {
+.cal4 {
     position: relative;
-    left: 1080px;
-    top: -720px;
+    left:900px;
+    top: 335px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+
 }
-
-.login {
-    position: relative;
-    float: right;
-    top: -800px;
-    height: 40px;
-    width: 80px;
-    font-size: 15px;
-}
-
-.radio {
-    position: relative;
-    left: 800px;
-    top: -500px;
-}
-
-.up {
-    position: relative;
-    left: 550px;
-    top: -450px;
-    width: 300px;
-}
-
-
-
