--- a/day46/homework/style2.css
+++ b/day46/homework/style2.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-style: solid;
 }
 
 body {
@@ -19,35 +20,38 @@ body {
     margin: 100px auto;
     padding: 10px;
     display: grid;
+    border-style: solid;
 }
 
-.aside {
+.sidebar {
     color: white;
-    background-color: rgb(69, 130, 234);
+    background-color: green;
     height: 600px;
     width: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-style: solid;
 }
 
 .header {
     height: 45px;
-    width: 740px;
-    background-color: lightblue;
+    width: 590px;
+    background-color: green;
     position: relative;
     display: flex;
     position: relative;
     bottom: 600px;
     left: 80px;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
+    border-style: solid;
 }
 
 .sec1 {
-    height: 200px;
-    width: 250px;
-    background-color: rgb(161, 204, 220);
+    height: 250px;
+    width: 300px;
+    background-color: orange;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,50 +61,63 @@ body {
 }
 
 .sec2 {
-    height: 200px;
-    width: 250px;
-    background-color: darkblue;
+    height: 250px;
+    width: 300px;
+    background-color: red;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-    left: 320px;
-    bottom: 800px;
+    left: 370px;
+    bottom: 850px;
 }
 
 .sec3 {
-    height: 200px;
-    width: 250px;
-    background-color: rgb(84, 84, 209);
+    height: 250px;
+    width: 300px;
+    background-color: red;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-    left: 570px;
-    bottom: 1000px;
-}
-
-.content {
-    background-color: rgb(100, 100, 245);
-    height: 310px;
-    width: 740px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    bottom: 1000px;
     left: 80px;
+    bottom: 850px;
 }
 
-.footer {
+.sec4 {
+    height: 250px;
+    width: 300px;
+    background-color: orange;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    left: 370px;
+    bottom: 1100px;
+}
+
+.sec5 {
+    width: 80px;
     height: 45px;
-    width: 740px;
-    background-color: rgb(43, 57, 209);
+    background-color: red;
     position: relative;
+    bottom: 1645px;
+    left: 668px;
     display: flex;
-    position: relative;
-    bottom: 1000px;
-    left: 80px;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
+}
+
+.navigation {
+    color: white;
+    background-color: green;
+    height: 600px;
+    width: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-style: solid;
+    position: relative;
+    left: 665px;
+    bottom: 1650px;
 }
